# liam.rs

./: .gitignore  .prettierignore  Cargo.toml  README.md  favicon-settings.json  gen.sh  justfile  post.esh  pyproject.toml  rss.esh
.github/workflows/: ci.yaml  expired-links.yaml
crates/: Cargo.toml
crates/dead-markdown-links/: Cargo.toml
crates/dead-markdown-links/src/: arguments.rs  issue.rs  status.rs
crates/expired-link-checker/: Cargo.toml
crates/expired-link-checker/src/: arguments.rs  client.rs  issue.rs  main.rs  status.rs  target.rs
crates/link-transformer/: Cargo.toml
crates/link-transformer/src/: main.rs
crates/replace-markdown-links/: Cargo.toml
crates/replace-markdown-links/src/: main.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: main.rs
docs/: .prettierrc  CNAME  index.html  index.xml  style.css
docs/css/: style.css  syntax.css
docs/favicon/: site.webmanifest
docs/js/: wikipedia-preview.production.js
docs/posts/: index.html
docs/posts/A_few_words/: index.html
docs/posts/Binary-search-for-bugs/: index.html
docs/posts/Binary_search_for_bugs/: index.html
docs/posts/Chaining-comparison-operators/: index.html
docs/posts/Chaining_comparison_operators/: index.html
docs/posts/Ergonomic-error-handling-in-Rust/: index.html
docs/posts/Ergonomic_error_handling_in_Rust/: index.html
docs/posts/From-bash-to-vim-and-back/: index.html
docs/posts/Higher-order-functions/: index.html
docs/posts/Higher_order_functions/: index.html
docs/posts/How-I-read-blogs/: index.html
docs/posts/How_I_read_blogs/: index.html
docs/posts/Incremental-select-with-treesitter/: index.html
docs/posts/Powerful-`just`-features/: index.html
docs/posts/Python-in-the-browser/: index.html
docs/posts/Scripting-in-markdown/: index.html
docs/posts/Useful-git-aliases/: index.html
docs/posts/Useful_git_aliases/: index.html
docs/posts/binary-search-for-bugs/: index.html
docs/posts/chaining-comparison-operators/: index.html
docs/posts/ergonomic-error-handling-in-rust/: index.html
docs/posts/from-bash-to-vim-and-back/: index.html
docs/posts/higher-order-functions/: index.html
docs/posts/how-i-read-blogs/: index.html
docs/posts/incremental-select-with-treesitter/: index.html
docs/posts/powerful-just-features/: index.html
docs/posts/python-in-the-browser/: index.html
docs/posts/scripting-in-markdown/: index.html
docs/posts/useful-git-aliases/: index.html
docs/projects/: index.html
docs/reviews/: index.html
docs/reviews/Test/: index.html
favicon/: favicon-output.txt
posts/: A_few_words.md  Binary-search-for-bugs.md  Chaining-comparison-operators.md  Chaining_comparison_operators.md  Ergonomic-error-handling-in-Rust.md  From-bash-to-vim-and-back.md  Higher-order-functions.md  How-I-read-blogs.md  How_I_read_blogs.md  Incremental-select-with-treesitter.md  Powerful-`just`-features.md  Python-in-the-browser.md  Scripting-in-markdown.md  Useful_git_aliases.md  binary-search-for-bugs.md  chaining-comparison-operators.md  higher-order-functions.md  how-I-read-blogs.md  powerful-just-features.md  python-in-the-browser.md  useful-git-aliases.md
projects/: arrg.md  axil.md  breakout.md  chatgpt-euler.md  chatgpt.nvim.md  crisp.md  degenerate.md  edmv.md  flint.md  fx.md  hush.md  jot.md  just-lsp.md  llmbda.md  mcgill.courses.md  mcgill.wtf.md  mem1p.md  microeconomics.study.md  minic.md  mnist.md  notes.md  ocs.md  ord.md  paragon.md  pdfathom.md  pqg.md  present.md  proust.md  pyproject.md  quwue.md  skeleton.md  solve.md  spymux.md  stream.md  swab.md  tetris.md  textmap.md  treesitter.run.md  treesitter.space.md  val.md  (+4 more)
reviews/: Test.md
src/: arguments.rs  converter.rs  environment.rs  front_matter.rs  frontmatter.rs  generator.rs  loader.rs  main.rs  post.rs  project.rs  server.rs  slug.rs  style.rs  subcommand.rs  watcher.rs
src/subcommand/: build.rs  generate.rs  serve.rs
templates/: index.html.j2  post.esh  post.html.j2  posts.html.j2  projects.html.j2  rss.esh  rss.xml.j2
