[project]
name = "liam.rs"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["ruff>=0.7.0"]

[tool.ruff]
src = ["src"]
indent-width = 2
line-length = 100

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
indent-style = "space"
quote-style = "single"
