[package]
name = "expired-link-checker"
version = "0.0.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.26", features = ["derive"] }
pulldown-cmark = "0.10.3"
reqwest = { version = "0.12.8", default-features = false, features = ["blocking", "rustls-tls"] }
url = "2.5.2"
walkdir = "2.5.0"
