[package]
name = "expired-link-checker"
version = "0.0.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
pulldown-cmark = "0.13.0"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
url = "2.5.7"
walkdir = "2.5.0"
