[package]
name = "expired-link-checker"
version = "0.0.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
pulldown-cmark = { workspace = true }
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
url = "2.5.7"
walkdir = { workspace = true }
